# minimal_lit

./: CMakeLists.txt  lit.cfg  lit.site.cfg.in  readme.md
srcs/: CMakeLists.txt  lit.local.cfg  main.cpp
tests/: lit.local.cfg  test.py
